# fastapi_template

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  TODO.md  main.py  pyproject.toml
.claude/: CLAUDE.md
alembic/: env.py
alembic/versions/: 383548bce26a_add_file_model.py  53ad66fd2c15_init.py  70ab808d938f_fix_file_model.py  71d6c9bedd7b_add_telegram_user_profile_cascade_delete.py  fa47fef47b1a_init.py
app/: __init__.py  lifecycle.py
app/api/: __init__.py  router.py
app/core/: __init__.py  config.py  database.py
app/modules/: __init__.py
app/modules/file_module/: AGENTS.md  README.md  __init__.py  handlers.py
app/modules/file_module/models/: __init__.py  file.py
app/modules/file_module/schemas/: __init__.py  file.py
app/modules/file_module/services/: __init__.py  s3_client.py
app/modules/file_module/utils/: __init__.py  sanitize_filename.py
app/modules/rmq_module/: AGENTS.md  README.md  __init__.py  config.py  exceptions.py  handlers.py  runtime.py
app/modules/rmq_module/schemas/: __init__.py  requests.py
app/modules/rmq_module/services/: client.py  consumer.py  publisher.py  runtime.py
app/modules/system/: AGENTS.md  README.md  __init__.py  handlers.py
app/modules/taskiq_module/: AGENTS.md  README.md  __init__.py  broker.py  config.py  discovery.py  exceptions.py  handlers.py  runtime.py  scheduler.py  tasks.py
app/modules/telegram/: AGENTS.md  README.md
app/modules/telegram_module/: README.md
app/modules/test_rmq_module/: handlers.py
docs/plans/: 2026-05-12-rmq-module-design.md
(+16 files in other folders)
